[gd_scene load_steps=22 format=3 uid="uid://dcxpj0we4t20j"]

[ext_resource type="Script" uid="uid://c44nhl6hx0x7a" path="res://scenes/common/character.gd" id="1_x5krk"]
[ext_resource type="Script" uid="uid://dg33vajbkreo2" path="res://scenes/non_player_character/enemy_brain.gd" id="2_g4xnq"]
[ext_resource type="Texture2D" uid="uid://b6f54iw5mdl8" path="res://textures/characters/player.png" id="2_vkgur"]
[ext_resource type="Script" uid="uid://bekl7pudxq13t" path="res://scenes/common/character_sprite.gd" id="3_g4xnq"]
[ext_resource type="PackedScene" uid="uid://dncqe48opxhn2" path="res://scenes/items/sword.tscn" id="5_phqxm"]
[ext_resource type="Texture2D" uid="uid://y7i0e8iyn7sf" path="res://textures/characters/hats/knight.png" id="5_vkgur"]
[ext_resource type="Script" uid="uid://c3kw622vmdasi" path="res://scenes/common/state_machine/state_machine.gd" id="6_uv0mj"]
[ext_resource type="Shape2D" uid="uid://mldtmixn1b2r" path="res://scenes/non_player_character/enemy_shape.tres" id="7_ekjmg"]
[ext_resource type="Script" uid="uid://ceovxhgx04a6s" path="res://scenes/hurt_box.gd" id="7_g4xnq"]
[ext_resource type="Script" uid="uid://bod6g0tox0jln" path="res://scenes/common/character_movement/idle_movement_state.gd" id="7_v5qig"]
[ext_resource type="Script" uid="uid://mbt8kxhtg5bx" path="res://scenes/common/character_movement/jump_movement_state.gd" id="8_xm55i"]
[ext_resource type="Script" uid="uid://d4hml4ekg31ch" path="res://scenes/common/character_movement/walk_movement_state.gd" id="9_ugong"]
[ext_resource type="Script" uid="uid://hsmootkffcg" path="res://scenes/common/character_movement/fall_movement_state.gd" id="10_il7rb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("2_vkgur")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("2_vkgur")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("2_vkgur")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_vkgur")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("2_vkgur")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_vkgur")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_vkgur")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_x5krk")

[node name="EnemyBrain" type="Node" parent="."]
script = ExtResource("2_g4xnq")
metadata/_custom_type_script = "uid://dg33vajbkreo2"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"idle"
script = ExtResource("3_g4xnq")

[node name="OnHead" type="Node2D" parent="AnimatedSprite2D"]

[node name="HatSprite2D" type="Sprite2D" parent="AnimatedSprite2D/OnHead"]
position = Vector2(0, -7)
scale = Vector2(0.998235, 1)
texture = ExtResource("5_vkgur")

[node name="InHand" type="Node2D" parent="AnimatedSprite2D"]
show_behind_parent = true

[node name="Sword" parent="AnimatedSprite2D/InHand" node_paths=PackedStringArray("brain") instance=ExtResource("5_phqxm")]
position = Vector2(4, 3)
brain = NodePath("../../../EnemyBrain")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = ExtResource("7_ekjmg")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource("7_g4xnq")
metadata/_custom_type_script = "uid://ceovxhgx04a6s"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = ExtResource("7_ekjmg")

[node name="MovementStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_uv0mj")
initial_state = NodePath("IdleMovementState")
metadata/_custom_type_script = "uid://c3kw622vmdasi"

[node name="IdleMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("7_v5qig")
metadata/_custom_type_script = "uid://bod6g0tox0jln"

[node name="JumpMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("8_xm55i")
metadata/_custom_type_script = "uid://mbt8kxhtg5bx"

[node name="WalkMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("9_ugong")
metadata/_custom_type_script = "uid://d4hml4ekg31ch"

[node name="FallMovementState" type="Node" parent="MovementStateMachine"]
script = ExtResource("10_il7rb")
metadata/_custom_type_script = "uid://hsmootkffcg"

[connection signal="flipped" from="." to="AnimatedSprite2D" method="_on_character_flipped"]
[connection signal="animation_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="update_offsets"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="update_offsets"]
[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_area_entered"]
[connection signal="area_exited" from="HurtBox" to="HurtBox" method="_on_area_exited"]
[connection signal="state_changed" from="MovementStateMachine" to="AnimatedSprite2D" method="_on_movement_state_changed"]
